==> neon-smart-studio/W-Link_NeonRTOS_Platform/src/W-Link/Driver/I2C/Device/I2C_Master_STM32.c <==
#include <stdio.h>
#include <stdlib.h>
#include <string.h>
#include <stdint.h>
#include <stdbool.h>
#include "soc.h"
#include "NeonRTOS.h"
#include "I2C/I2C_Master.h"
#include "I2C_Master_STM32.h"
#include "I2C/I2C_Pin.h"
#include "GPIO/Device/GPIO_STM32.h"
#define TIMING_VAL_48M_CLK_100KHZ  0x10805E89  // Standard mode with Rise Time = 400ns and Fall Time = 100ns
#define TIMING_VAL_48M_CLK_400KHZ  0x00901850  // Fast mode with Rise Time = 250ns and Fall Time = 100ns
#define TIMING_VAL_48M_CLK_1MHZ    0x00700818  // Fast mode Plus with Rise Time = 60ns and Fall Time = 100ns
#define I2C_PCLK_48M               48000000    // 48 MHz
#define TIMING_VAL_54M_CLK_100KHZ  0x10916998  // Standard mode with Rise time = 120ns, Fall time = 120ns
#define TIMING_VAL_54M_CLK_400KHZ  0x00B11B54  // Fast Mode with Rise time = 120ns, Fall time = 120ns
#define TIMING_VAL_54M_CLK_1MHZ    0x0090091B  // Fast Mode Plus with Rise time = 120ns, Fall time = 10ns
#define I2C_PCLK_54M               54000000    // 54 MHz
#define TIMING_VAL_64M_CLK_100KHZ  0x10B17DB4  // Standard mode with Rise time = 120ns, Fall time = 120ns
#define TIMING_VAL_64M_CLK_400KHZ  0x00E22163  // Fast Mode with Rise time = 120ns, Fall time = 120ns
#define TIMING_VAL_64M_CLK_1MHZ    0x00A00D1E  // Fast Mode Plus with Rise time = 120ns, Fall time = 10ns
#define I2C_PCLK_64M               64000000    // 64 MHz
#define TIMING_VAL_72M_CLK_100KHZ  0x10D28DCB  // Standard mode with Rise time = 120ns, Fall time = 120ns

hwI2C_OpResult I2C_Master_Init(hwI2C_Index index, hwI2C_Speed_Mode speed_mode)
{
    if (index >= hwI2C_Index_MAX) {
        return hwI2C_InvalidParameter;
    }

    if (I2C_Master_Init_Status[index]) {
        return hwI2C_OK;
    }

    if (speed_mode >= hwI2C_Speed_Mode_MAX) {
        return hwI2C_InvalidParameter;
    }

    hwGPIO_Pin sda_pin = I2C_Pin_Def_Table[index][I2C_Index_Map_Alt[index]].sda_pin;
    hwGPIO_Pin scl_pin = I2C_Pin_Def_Table[index][I2C_Index_Map_Alt[index]].scl_pin;

    GPIO_TypeDef *sda_soc_base = GPIO_Map_Soc_Base(sda_pin);
    GPIO_TypeDef *scl_soc_base = GPIO_Map_Soc_Base(scl_pin);
    
    uint16_t sda_soc_pin = GPIO_Map_Soc_Pin(sda_pin);
    uint16_t scl_soc_pin = GPIO_Map_Soc_Pin(scl_pin);

    if (sda_soc_pin == 0 || sda_soc_base == NULL ||
        scl_soc_pin == 0 || scl_soc_base == NULL) {
        return hwI2C_InvalidParameter;
    }

#ifndef STM32F1
    uint32_t sda_af = STM32_I2C_GetAF(index, sda_pin);
    uint32_t scl_af = STM32_I2C_GetAF(index, scl_pin);

    if (sda_af == 0 || scl_af == 0) {
        return hwI2C_InvalidParameter;
    }
#endif

    if (NeonRTOS_SyncObjCreate(&I2C_Master_Done_SyncHandle[index]) != NeonRTOS_OK) {
        return hwI2C_MemoryError;
    }

    GPIO_Enable_RCC_Clock(sda_soc_base);
    GPIO_Enable_RCC_Clock(scl_soc_base);

    GPIO_InitTypeDef g_i2c_sda = {0};
    g_i2c_sda.Pin       = sda_soc_pin;
    g_i2c_sda.Mode      = GPIO_MODE_AF_OD;
    g_i2c_sda.Pull      = GPIO_PULLUP;
#ifdef GPIO_SPEED_FREQ_VERY_HIGH
    g_i2c_sda.Speed     = GPIO_SPEED_FREQ_VERY_HIGH;
#else
    g_i2c_sda.Speed     = GPIO_SPEED_HIGH;
#endif
#ifndef STM32F1
    g_i2c_sda.Alternate = sda_af;
#endif
    HAL_GPIO_Init(sda_soc_base, &g_i2c_sda);

    GPIO_InitTypeDef g_i2c_scl = {0};
    g_i2c_scl.Pin       = scl_soc_pin;
    g_i2c_scl.Mode      = GPIO_MODE_AF_OD;
    g_i2c_scl.Pull      = GPIO_PULLUP;
#ifdef GPIO_SPEED_FREQ_VERY_HIGH
    g_i2c_scl.Speed     = GPIO_SPEED_FREQ_VERY_HIGH;
#else
    g_i2c_scl.Speed     = GPIO_SPEED_HIGH;
#endif
#ifndef STM32F1
    g_i2c_scl.Alternate = scl_af;
#endif
    HAL_GPIO_Init(scl_soc_base, &g_i2c_scl);

    hwI2C_OpResult result;

#ifdef STM32F1
    result = I2C_ApplyRemap(
        index,
        scl_pin,
        sda_pin
    );

    if (result != hwI2C_OK) {
        NeonRTOS_SyncObjDelete(&I2C_Master_Done_SyncHandle[index]);
        return result;
    }
#endif

    result = I2C_Instance_Init(index, speed_mode);
    if(result != hwI2C_OK) {
        NeonRTOS_SyncObjDelete(&I2C_Master_Done_SyncHandle[index]);
        return result;
    }

    I2C_NVIC_Init(index);

    gpio_pin_init_status[sda_pin] = true;
    gpio_pin_init_status[scl_pin] = true;

    I2C_Clock_Speed_Mode[index] = speed_mode;
    I2C_Master_Init_Status[index] = true;

    return hwI2C_OK;
}

hwI2C_OpResult I2C_Master_DeInit(hwI2C_Index index)
{
    if (index >= hwI2C_Index_MAX) {
        return hwI2C_InvalidParameter;
    }

    if (I2C_Master_Init_Status[index] == false) {
        return hwI2C_OK;
    }

    hwGPIO_Pin sda_pin = I2C_Pin_Def_Table[index][I2C_Index_Map_Alt[index]].sda_pin;
    hwGPIO_Pin scl_pin = I2C_Pin_Def_Table[index][I2C_Index_Map_Alt[index]].scl_pin;

    GPIO_TypeDef *sda_soc_base = GPIO_Map_Soc_Base(sda_pin);
    GPIO_TypeDef *scl_soc_base = GPIO_Map_Soc_Base(scl_pin);
    
    uint16_t sda_soc_pin = GPIO_Map_Soc_Pin(sda_pin);
    uint16_t scl_soc_pin = GPIO_Map_Soc_Pin(scl_pin);

    if (sda_soc_pin == 0 || sda_soc_base == NULL ||
        scl_soc_pin == 0 || scl_soc_base == NULL) {
        return hwI2C_InvalidParameter;
    }

    I2C_Master_Init_Status[index] = false;

    I2C_NVIC_DeInit(index);

    I2C_Instance_DeInit(index);

#ifdef STM32F1
    I2C_RestoreRemap(index);
#endif

    NeonRTOS_SyncObjDelete(&I2C_Master_Done_SyncHandle[index]);

    HAL_GPIO_DeInit(sda_soc_base, sda_soc_pin);
    HAL_GPIO_DeInit(scl_soc_base, scl_soc_pin);

    gpio_pin_init_status[sda_pin] = false;
    gpio_pin_init_status[scl_pin] = false;

    return hwI2C_OK;
}

hwI2C_OpResult I2C_Master_Read(hwI2C_Index index, uint8_t address, uint8_t *read_dat, uint8_t read_len, bool stop, NeonRTOS_Time_t timeoutMs)
{
    (void)stop;

    if (index >= hwI2C_Index_MAX) {
        return hwI2C_InvalidParameter;
    }

    if (I2C_Master_Init_Status[index] == false) {
        return hwI2C_NotInit;
    }

    if (read_dat == NULL && read_len > 0) {
        return hwI2C_InvalidParameter;
    }

    if (read_len == 0) {
        return hwI2C_InvalidParameter;
    }

    if (HAL_I2C_Master_Receive_IT(&g_i2c[index], address << 1, read_dat, read_len) != HAL_OK) {
        return hwI2C_BusError;
    }

    if (NeonRTOS_SyncObjWait(&I2C_Master_Done_SyncHandle[index], timeoutMs) != NeonRTOS_OK) {
        HAL_I2C_Master_Abort_IT(&g_i2c[index], address << 1);
        return hwI2C_SlaveTimeout;
    }

    return (g_i2c[index].ErrorCode == HAL_I2C_ERROR_NONE) ? hwI2C_OK : hwI2C_BusError;
}

hwI2C_OpResult I2C_Master_Write(hwI2C_Index index, uint8_t address, uint8_t *write_dat, uint8_t write_len, bool stop, NeonRTOS_Time_t timeoutMs)
{
    (void)stop;

    if (index >= hwI2C_Index_MAX) {
        return hwI2C_InvalidParameter;
    }

    if (I2C_Master_Init_Status[index] == false) {
        return hwI2C_NotInit;
    }

    if (write_dat == NULL && write_len > 0) {
        return hwI2C_InvalidParameter;
    }

    if (write_len == 0) {
        return hwI2C_InvalidParameter;
    }

    if (HAL_I2C_Master_Transmit_IT(&g_i2c[index], address << 1, write_dat, write_len) != HAL_OK) {
        return hwI2C_BusError;
    }

    if (NeonRTOS_SyncObjWait(&I2C_Master_Done_SyncHandle[index], timeoutMs) != NeonRTOS_OK) {
        HAL_I2C_Master_Abort_IT(&g_i2c[index], address << 1);
        return hwI2C_SlaveTimeout;
    }

    return (g_i2c[index].ErrorCode == HAL_I2C_ERROR_NONE) ? hwI2C_OK : hwI2C_BusError;
}
