==> neon-smart-studio/W-Link_NeonRTOS_Platform/src/W-Link/Driver/I2C/Device/RP2/I2C_Master_RP2.c <==
#include <stdio.h>
#include <stdlib.h>
#include <string.h>
#include <stdint.h>
#include <stdbool.h>
#include "soc.h"
#include "NeonRTOS.h"
#include "I2C/I2C_Master.h"
#include "GPIO/Device/RP2/GPIO_RP2.h"
#include "I2C/Pin/RP2/I2C_Pin_RP2.h"
#include "I2C_Master_RP2.h"

hwI2C_OpResult I2C_Master_Init(hwI2C_Index index, hwI2C_Speed_Mode speed_mode)
{
    if (index >= hwI2C_Index_MAX) {
        return hwI2C_InvalidParameter;
    }

    if (I2C_Master_Init_Status[index]) {
        return hwI2C_OK;
    }

    if (speed_mode >= hwI2C_Speed_Mode_MAX) {
        return hwI2C_InvalidParameter;
    }

    i2c_inst_t *inst = I2C_Map_Soc_Base(index);
    if(inst==NULL) {
        return hwI2C_InvalidParameter;
    }

    hwGPIO_Pin sda_pin = I2C_Pin_Def_Table[index][I2C_Index_Map_Alt[index]].sda_pin;
    hwGPIO_Pin scl_pin = I2C_Pin_Def_Table[index][I2C_Index_Map_Alt[index]].scl_pin;

    gpio_set_function(sda_pin, GPIO_FUNC_I2C);
    gpio_set_function(scl_pin, GPIO_FUNC_I2C);
    gpio_pull_up(sda_pin);
    gpio_pull_up(scl_pin);

    uint baud = I2C_MASTER_STANDARD_MODE_CLK_FREQUENCY;

    switch (speed_mode) {
        case hwI2C_Standard_Mode:
            baud = I2C_MASTER_STANDARD_MODE_CLK_FREQUENCY;
            break;

        case hwI2C_Fast_Mode:
            baud = I2C_MASTER_FAST_MODE_CLK_FREQUENCY;
            break;

        case hwI2C_High_Speed_Mode:
            baud = I2C_MASTER_HIGH_SPEED_MODE_CLK_FREQUENCY;
            break;
    }

    i2c_init(inst, baud);

    if (NeonRTOS_SyncObjCreate(&I2C_Master_Done_SyncHandle[index]) != NeonRTOS_OK) {
        return hwI2C_MemoryError;
    }

    switch(index)
    {
        case hwI2C_Index_0:
            irq_set_exclusive_handler(I2C0_IRQ, I2C0_IRQ_Handler);
            irq_set_enabled(I2C0_IRQ, true);
            break;
        case hwI2C_Index_1:
            irq_set_exclusive_handler(I2C1_IRQ, I2C1_IRQ_Handler);
            irq_set_enabled(I2C1_IRQ, true);
            break;
    }

    i2c_get_hw(inst)->intr_mask = 0;

    gpio_pin_init_status[sda_pin] = true;
    gpio_pin_init_status[scl_pin] = true;

    I2C_Clock_Speed_Mode[index] = speed_mode;
    I2C_Master_Init_Status[index] = true;

    return hwI2C_OK;
}

hwI2C_OpResult I2C_Master_DeInit(hwI2C_Index index)
{
    if (index >= hwI2C_Index_MAX) {
        return hwI2C_InvalidParameter;
    }

    if (I2C_Master_Init_Status[index] == false) {
        return hwI2C_OK;
    }

    i2c_inst_t *inst = I2C_Map_Soc_Base(index);
    if(inst==NULL) {
        return hwI2C_InvalidParameter;
    }

    I2C_Master_Init_Status[index] = false;

    i2c_get_hw(inst)->intr_mask = 0;

    switch(index)
    {
        case hwI2C_Index_0:
            irq_set_enabled(I2C0_IRQ, false);
            break;
        case hwI2C_Index_1:
            irq_set_enabled(I2C1_IRQ, false);
            break;
    }

    i2c_deinit(inst);

    NeonRTOS_SyncObjDelete(&I2C_Master_Done_SyncHandle[index]);

    memset(&i2c_xfer[index], 0, sizeof(i2c_xfer[index]));

    hwGPIO_Pin sda_pin = I2C_Pin_Def_Table[index][I2C_Index_Map_Alt[index]].sda_pin;
    hwGPIO_Pin scl_pin = I2C_Pin_Def_Table[index][I2C_Index_Map_Alt[index]].scl_pin;

    gpio_deinit(sda_pin);
    gpio_deinit(scl_pin);

    gpio_pin_init_status[sda_pin] = false;
    gpio_pin_init_status[scl_pin] = false;

    return hwI2C_OK;
}

hwI2C_OpResult I2C_Master_Read(hwI2C_Index index, uint8_t address, uint8_t *read_dat, uint8_t read_len, bool stop, NeonRTOS_Time_t timeoutMs)
{
    if (index >= hwI2C_Index_MAX) {
        return hwI2C_InvalidParameter;
    }

    if (I2C_Master_Init_Status[index] == false) {
        return hwI2C_NotInit;
    }

    if (read_dat == NULL && read_len > 0) {
        return hwI2C_InvalidParameter;
    }

    if (read_len == 0) {
        return hwI2C_InvalidParameter;
    }

    i2c_inst_t *inst = I2C_Map_Soc_Base(index);
    if(inst==NULL) {
        return hwI2C_InvalidParameter;
    }

    if (i2c_xfer[index].state == RP2_I2C_TX ||
        i2c_xfer[index].state == RP2_I2C_RX) {
        return hwI2C_BusError;
    }

    i2c_hw_t *hw = i2c_get_hw(inst);

    RP2_I2C_Transfer *t = &i2c_xfer[index];

    memset(t, 0, sizeof(*t));

    t->state  = RP2_I2C_RX;
    t->addr   = address;
    t->rx_buf = read_dat;
    t->rx_len = read_len;
    t->stop   = stop;

    hw->enable = 0;
    hw->tar = address;
    hw->enable = 1;

    (void)hw->clr_intr;
    hw->intr_mask =
        I2C_IC_INTR_MASK_M_RX_FULL_BITS |
        I2C_IC_INTR_MASK_M_TX_EMPTY_BITS |
        I2C_IC_INTR_MASK_M_STOP_DET_BITS |
        I2C_IC_INTR_MASK_M_TX_ABRT_BITS;

    switch(index)
    {
        case hwI2C_Index_0:
            irq_set_pending(I2C0_IRQ);
            break;
        case hwI2C_Index_1:
            irq_set_pending(I2C1_IRQ);
            break;
    }

    if (NeonRTOS_SyncObjWait(&I2C_Master_Done_SyncHandle[index], timeoutMs) != NeonRTOS_OK) {
        hw->intr_mask = 0;
        t->state = RP2_I2C_ERROR;
        
        switch(index)
        {
            case hwI2C_Index_0:
                irq_clear(I2C0_IRQ);
                break;
            case hwI2C_Index_1:
                irq_clear(I2C1_IRQ);
                break;
        }

        return hwI2C_SlaveTimeout;
    }

    return (t->state == RP2_I2C_DONE) ? hwI2C_OK : hwI2C_BusError;
}

hwI2C_OpResult I2C_Master_Write(hwI2C_Index index, uint8_t address, uint8_t *write_dat, uint8_t write_len, bool stop, NeonRTOS_Time_t timeoutMs)
{
    if (index >= hwI2C_Index_MAX) {
        return hwI2C_InvalidParameter;
    }

    if (I2C_Master_Init_Status[index] == false) {
        return hwI2C_NotInit;
    }

    if (write_dat == NULL && write_len > 0) {
        return hwI2C_InvalidParameter;
    }

    if (write_len == 0) {
        return hwI2C_InvalidParameter;
    }

    i2c_inst_t *inst = I2C_Map_Soc_Base(index);
    if(inst==NULL) {
        return hwI2C_InvalidParameter;
    }

    if (i2c_xfer[index].state == RP2_I2C_TX ||
        i2c_xfer[index].state == RP2_I2C_RX) {
        return hwI2C_BusError;
    }
    
    i2c_hw_t *hw = i2c_get_hw(inst);

    RP2_I2C_Transfer *t = &i2c_xfer[index];

    memset(t, 0, sizeof(*t));

    t->state  = RP2_I2C_TX;
    t->addr   = address;
    t->tx_buf = write_dat;
    t->tx_len = write_len;
    t->stop   = stop;

    hw->enable = 0;
    hw->tar = address;
    hw->enable = 1;

    (void)hw->clr_intr;
    hw->intr_mask =
        I2C_IC_INTR_MASK_M_TX_EMPTY_BITS |
        I2C_IC_INTR_MASK_M_STOP_DET_BITS |
        I2C_IC_INTR_MASK_M_TX_ABRT_BITS;

    switch(index)
    {
        case hwI2C_Index_0:
            irq_set_pending(I2C0_IRQ);
            break;
        case hwI2C_Index_1:
            irq_set_pending(I2C1_IRQ);
            break;
    }

    if (NeonRTOS_SyncObjWait(&I2C_Master_Done_SyncHandle[index], timeoutMs) != NeonRTOS_OK) {
        hw->intr_mask = 0;
        t->state = RP2_I2C_ERROR;

        switch(index)
        {
            case hwI2C_Index_0:
                irq_clear(I2C0_IRQ);
                break;
            case hwI2C_Index_1:
                irq_clear(I2C1_IRQ);
                break;
        }

        return hwI2C_SlaveTimeout;
    }

    return (t->state == RP2_I2C_DONE) ? hwI2C_OK : hwI2C_BusError;
}
